--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "crypto-js": "^4.2.0",
     "mysql2": "^3.9.1",
